# Groot

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
src/chat/application/: services.py
src/chat/domain/: entities.py
src/chat/infrastructure/llm/: client.py
src/chat/infrastructure/persistence/: init_db.py  models.py  repository.py  session.py
src/chat/infrastructure/tools/: wikipedia.py
src/chat/orchestration/: error.py  graph.py  state.py
src/chat/orchestration/nodes/: __init__.py  agent.py  blocked.py  guardrail.py  ner.py
src/chat/presentation/: __init__.py  terminal_ui.py
src/groot/chat/infrastructure/llm/: client.py  error.py
src/groot/chat/infrastructure/persistence/: init_db.py  models.py  repository.py  session.py
src/groot/chat/infrastructure/tools/: wikipedia.py
src/groot/chat/orchestration/: graph.py
src/groot/chat/orchestration/nodes/: __init__.py  agent.py  blocked.py  guardrail.py  ner.py
src/groot/shared/config/: settings.py
src/shared/config/: settings.py
src/shared/logging/: setup.py
