[project]
name = "groot"
version = "0.1.0"
description = "LLM chatbot with Wikipedia search tool, political guardrails, and prompt analytics using NER and topic classification with stored metadata for analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.15.10",
]
